src/objects/EventApi__Speaker_Schedule_Item__c.object
<CustomObject>
    <description>Schedule Item Speakers track the various Sessions and Seminars a Speaker is scheduled to present for a Event.</description>
    <fields>
        <fullName>EventApi__Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Speaker is considered the lead or &quot;primary&quot; presenter for the Schedule Item.</description>
        <inlineHelpText>When checked, the Speaker is considered the lead or &quot;primary&quot; presenter for the Schedule Item.</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Role__c</fullName>
        <description>The speaker&apos;s role with respect to the related schedule item.</description>
        <inlineHelpText>The speaker&apos;s role with respect to the related schedule item.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference Chair</fullName>
                </value>
                <value>
                    <fullName>Conference Cochair</fullName>
                </value>
                <value>
                    <fullName>Program Committee</fullName>
                </value>
                <value>
                    <fullName>Scientific Committee</fullName>
                </value>
                <value>
                    <fullName>Scientific Committee Chair</fullName>
                </value>
                <value>
                    <fullName>Scientific Committee Cochair</fullName>
                </value>
                <value>
                    <fullName>Organizing Committee</fullName>
                </value>
                <value>
                    <fullName>Executive Committee</fullName>
                </value>
                <value>
                    <fullName>Keynote Speaker</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
                <value>
                    <fullName>Session Chair</fullName>
                </value>
                <value>
                    <fullName>Discussant</fullName>
                </value>
                <value>
                    <fullName>Moderator</fullName>
                </value>
                <value>
                    <fullName>Panelist</fullName>
                </value>
                <value>
                    <fullName>Accepted Abstract Presenter</fullName>
                </value>
                <value>
                    <fullName>Workshop Director</fullName>
                </value>
                <value>
                    <fullName>Workshop Co-director</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>Faculty-Clinician</fullName>
                </value>
                <value>
                    <fullName>Faculty-Biostatistician</fullName>
                </value>
                <value>
                    <fullName>Faculty-Patient Advocate</fullName>
                </value>
                <value>
                    <fullName>Faculty-PDG</fullName>
                </value>
                <value>
                    <fullName>Jr. Faculty</fullName>
                </value>
                <value>
                    <fullName>Lab Director</fullName>
                </value>
                <value>
                    <fullName>Lab Assistant</fullName>
                </value>
                <value>
                    <fullName>Lecturer</fullName>
                </value>
                <value>
                    <fullName>Trainee</fullName>
                </value>
                <value>
                    <fullName>Sr. Scientist</fullName>
                </value>
                <value>
                    <fullName>Observer</fullName>
                </value>
                <value>
                    <fullName>Poster Highlight Presenter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Schedule_Item__c</fullName>
        <description>Link to the schedule item.</description>
        <inlineHelpText>Link to the schedule item.</inlineHelpText>
        <label>Schedule Item</label>
        <referenceTo>EventApi__Schedule_Item__c</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>Speaker_Schedule_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EventApi__Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the speaker.</description>
        <inlineHelpText>Link to the speaker.</inlineHelpText>
        <label>Speaker</label>
        <referenceTo>EventApi__Speaker__c</referenceTo>
        <relationshipLabel>Schedule</relationshipLabel>
        <relationshipName>Speaker_Schedule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invitation_Status__c</fullName>
        <description>Indicates when the speaker invitation was last sent. Used to determine follow up.</description>
        <inlineHelpText>Indicates when the speaker invitation was last sent. Used to determine follow up.</inlineHelpText>
        <label>Invitation Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Presentation_Order__c</fullName>
        <description>The order in which the person will be speaking within the session so that staff can order appropriately in a report.</description>
        <inlineHelpText>The order in which the person will be speaking within the session.</inlineHelpText>
        <label>Presentation Order</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Time__c</fullName>
        <description>The time period for the presentation</description>
        <inlineHelpText>The time period for the presentation (e.g. 8:00am - 9:00am)</inlineHelpText>
        <label>Presentation Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Title__c</fullName>
        <description>Speaker presentation title</description>
        <label>Presentation Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Replacement_for__c</fullName>
        <description>Notates if a speaker is a replacement for a previous invitee that declined.</description>
        <inlineHelpText>Notates if a speaker is a replacement for a previous invitee that declined.</inlineHelpText>
        <label>Replacement for</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Status__c</fullName>
        <description>Tracking invitation status of a speaker for a session. Determining whether a speaker has been invited, accepted or declined, and move onto next potential candidate.</description>
        <inlineHelpText>Tracking invitation status of a speaker for a session.</inlineHelpText>
        <label>Speaker Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Suggested</fullName>
                </value>
                <value>
                    <fullName>Replacement for</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Speaker Schedule Item</label>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speaker Schedule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>